# travel_log

./: .gitignore  COMPLETE_WORKFLOW.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  app.py  cleanup.sh  config.yaml.template  demo_face_detection.py  kill_streamlit.sh  llava_batch_processor.py  manage_face_database.py  mkdocs.yml  process_extracted_faces.py  pyproject.toml  run_app.sh  run_app_local.sh  run_app_network.sh  setup_suppress_warnings.py  simple_download.py  store_reference_faces.py  template_script.py  test_heic.py  verify_installation.py
.streamlit/: config.toml
docs/: INDEX.md  README.md  face-recognition-guide.md  index.md
documentation/: CLEANUP_SUMMARY.md  CONFIGURATION.md  DEEPFACE_ALTERNATIVES.md  DEEPFACE_DOWNLOADS.md  HEIC_SUPPORT.md  NETWORK_ACCESS.md  ORGANIZATION_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  STREAMLIT_APP.md  TENSORFLOW_WARNING_FIX.md
examples/: README.md  caption_generation_example.py  complete_workflow_example.py  dspy_llava_demo.py  exif_metadata_example.py  extract_faces_example.py  face_detection_example.py  face_embeddings_example.py  face_labeling_example.py  face_storage_example.py  qdrant_storage_example.py  test_fix.py  test_no_warnings.py
face_database/: ds_model_vggface_detector_retinaface_aligned_normalization_base_expand_0.pkl
tests/: README.md  check_deepface_models.py  check_vggface.py  diagnose_face_matching.py  identify_with_qdrant.py  quick_face_test.py  quick_view_qdrant.py  rebuild_face_db.py  simple_face_test.py  (+9 more)
(+40 files in other folders)
